feat: update AWS deployment scripts to use ECS FARGATE as capacity provider(#1)
- Improve deployment docs
- Change ECS capacity provider from EC2 to Fargate to simplify scalability
- Automate cron bucket creation
- Add custom database connection to AWS enviroment

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 */*terraform.tfstate.d*/*
 **/.terraform/*
 **/.terraform.lock.hcl
-
+**/locals_environments.prod.tf
 **/config/*
 /kubernetes/**/*.tgz
 
